k8s/kafka-ecosystem.yaml
# Zookeeper
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: cinequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: cinequest
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
# Kafka Broker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: cinequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: cinequest
spec:
  selector:
    app: broker
  ports:
    - name: external
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: internal
      protocol: TCP
      port: 29092
      targetPort: 29092
---
# Schema Registry
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-schema-registry
  namespace: cinequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-schema-registry
  template:
    metadata:
      labels:
        app: kafka-schema-registry
    spec:
      containers:
        - name: kafka-schema-registry
          image: confluentinc/cp-schema-registry:7.5.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-schema-registry
  namespace: cinequest
spec:
  selector:
    app: kafka-schema-registry
  ports:
    - port: 8081
      targetPort: 8081
---
# Kafka UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: cinequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: cinequest
spec:
  type: NodePort
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30086
      protocol: TCP
