k8s/keycloak.yaml
# Keycloak
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: cinequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          args:
            - start-dev
            - --import-realm
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm-config
              mountPath: /opt/keycloak/data/import
          readinessProbe:
            httpGet:
              path: /keycloak/realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /keycloak/realms/master
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
      volumes:
        - name: keycloak-realm-config
          configMap:
            name: keycloak-realm-config
            optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: cinequest
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
